Fixes alignment issue in IE for org profile page and code cleanup

--- a/app/scss/3-views/organization/organization.scss
+++ b/app/scss/3-views/organization/organization.scss
@@ -67,3 +67,10 @@
   @extend %bold;
   margin-bottom: em(21);
 }
+
+.cui-field-val--stack {
+  display: flex;
+  flex-direction: column;
+  align-items:flex-start;
+  -ms-flex-align:flex-start;
+}
