--- a/app/scss/3-views/user/profile.scss
+++ b/app/scss/3-views/user/profile.scss
@@ -85,11 +85,6 @@
   justify-content: space-between;
 }
 
-.cui-field-val--stack {
-  display: flex;
-  flex-direction: column;
-}
-
 .cui-users__item {
   margin-bottom: em(10);
 }
